# gerrit-checker

./: README.rst  daily_routine.sh  requirements.txt  setup.cfg
gerrit_checker/: .check.py.swp  .gerrit_client.py.swp  check.py  constants.py  gerrit_client.py
