[metadata]
name = gerrit-checker
version = 0.000000001
summary = Check stuff on gerrit
author = A dude
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    gerrit_checker
data_files =

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    gerrit-check = gerrit_checker.check:main

[wheel]
universal = 1
